--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xubuntu-artwork (18.10) UNRELEASED; urgency=medium
+
+  * debian/xubuntu-wallpapers.links:
+    - Link to development wallpaper
+  * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
+    - Bump plymouth-text version number for cosmic
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 08 May 2018 20:39:22 -0400
+
 xubuntu-artwork (18.04.5) bionic; urgency=medium
 
   * Update elementary-xfce to 3ab8783
