--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-xubuntu-artwork (18.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (18.10.1) cosmic; urgency=medium
 
   * d/xubuntu-artwork.{prerm,postint}
     - Switch xubuntu branding to support the png theme variant
 
- -- Sean Davis <smd.seandavis@gmail.com>  Thu, 13 Sep 2018 22:16:31 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 16 Sep 2018 17:38:45 -0400
 
 xubuntu-artwork (18.10) cosmic; urgency=medium
 
