Add 19.04 desktop wallpaper, ready for the UIFe process.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (19.04) UNRELEASED; urgency=medium
+
+  * New wallpaper for desktop.
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Sat, 16 Mar 2019 12:09:42 +0200
+
 xubuntu-artwork (18.10.3) cosmic; urgency=medium
 
   [ Pasi Lallinaho ]
