--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+xubuntu-artwork (19.10.1) UNRELEASED; urgency=medium
+
+  [ Pasi Lallinaho ]
+  * New wallpaper for desktop (LP: #1846935)
+
+  [ Sean Davis ]
+  * d/copyright:
+    - Include full CC-BY-SA-3.0 (incomplete-creative-commons-license)
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 06 Oct 2019 05:38:18 -0400
+
 xubuntu-artwork (19.10) eoan; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
