--- a/debian/changelog
+++ b/debian/changelog
@@ -11,10 +11,13 @@ xubuntu-artwork (19.10.1) UNRELEASED; urgency=medium
     - Bump Standards-Version to 4.4.0
     - Update VCS links
     - Set Rules-Requires-Root: no
+    - Updated package descriptions (description-is-pkg-name,
+      extended-description-is-probably-too-short)
+    - Suggest xubuntu-community-wallpapers for xubuntu-wallpapers
   * d/compat:
     - Bump debhelper to 12
 
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 06 Oct 2019 06:29:56 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Sun, 06 Oct 2019 07:08:27 -0400
 
 xubuntu-artwork (19.10) eoan; urgency=medium
 
