--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (19.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (19.10.1) eoan; urgency=medium
 
   [ Pasi Lallinaho ]
   * New wallpaper for desktop (LP: #1846935)
@@ -18,7 +18,7 @@ xubuntu-artwork (19.10.1) UNRELEASED; urgency=medium
   * d/rules:
     - Drop gh_dconf override, we no longer ship gconf settings
 
- -- Sean Davis <smd.seandavis@gmail.com>  Sun, 06 Oct 2019 07:25:41 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Tue, 08 Oct 2019 05:20:00 -0400
 
 xubuntu-artwork (19.10) eoan; urgency=medium
 
