--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (20.04.1) UNRELEASED; urgency=medium
+xubuntu-artwork (20.04.1) focal; urgency=medium
 
   * New wallpaper (LP: #1871357)
   * Update copyright
