--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xubuntu-artwork (20.10.1) UNRELEASED; urgency=medium
+
+  * debian/xubuntu-wallpapers.links:
+    - Link to development wallpaper
+  * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
+    - Bump plymouth-text version number for groovy
+
+ -- Sean Davis <smd.seandavis@gmail.com>  Wed, 29 Apr 2020 06:28:20 -0400
+
 xubuntu-artwork (20.04.2) focal; urgency=medium
 
   * Reupload with final version of new wallpaper
