--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xubuntu-artwork (20.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (21.04.0) hirsute; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
     - Link to development wallpaper
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
-    - Bump plymouth-text version number for groovy
+    - Bump plymouth-text version number for hirsute
 
- -- Sean Davis <smd.seandavis@gmail.com>  Wed, 29 Apr 2020 06:28:20 -0400
+ -- Sean Davis <smd.seandavis@gmail.com>  Sat, 12 Dec 2020 19:29:05 -0500
 
 xubuntu-artwork (20.04.2) focal; urgency=medium
 
