--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (21.10.1) UNRELEASED; urgency=medium
+
+  * New wallpaper for Impish Indri (LP: #1945579)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Thu, 30 Sep 2021 10:12:57 +0300
+
 xubuntu-artwork (21.10) impish; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
