--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (21.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (21.10.1) impish; urgency=medium
 
   * New wallpaper for Impish Indri (LP: #1945579)
 
