--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (22.04.1) UNRELEASED; urgency=medium
+
+  * New wallpaper for 22.04 (LP: #1967940)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Wed, 06 Apr 2022 17:24:50 +0300
+
 xubuntu-artwork (22.04) jammy; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
