--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (22.04.1) UNRELEASED; urgency=medium
+xubuntu-artwork (22.04.1) jammy; urgency=medium
 
   * New wallpaper for 22.04 (LP: #1967940)
 
