usr/share/gtksourceview-4: Install xubuntu-light/dark themes (LP: #1986935)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (22.10) UNRELEASED; urgency=medium
+
+  * usr/share/gtksourceview-4:
+    - Install xubuntu-light/dark themes (LP: #1986935)
+
+ -- Sean Davis <sean@bluesabre.org>  Wed, 14 Sep 2022 07:47:08 -0400
+
 xubuntu-artwork (22.04.1) jammy; urgency=medium
 
   * New wallpaper for 22.04 (LP: #1967940)
