debian/xubuntu-wallpapers.links: Link to development wallpaper

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,10 +2,12 @@ xubuntu-artwork (22.10) UNRELEASED; urgency=medium
 
   * debian/copyright:
     - Update and sort copyrights
+  * debian/xubuntu-wallpapers.links:
+    - Link to development wallpaper
   * usr/share/gtksourceview-4:
     - Install xubuntu-light/dark themes (LP: #1986935)
 
- -- Sean Davis <sean@bluesabre.org>  Wed, 14 Sep 2022 17:01:12 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sun, 25 Sep 2022 04:54:02 -0400
 
 xubuntu-artwork (22.04.1) jammy; urgency=medium
 
