--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (22.10.1) UNRELEASED; urgency=medium
+
+  * New walpaper for 22.10 (LP: #1992956)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Fri, 14 Oct 2022 14:06:27 +0300
+
 xubuntu-artwork (22.10) kinetic; urgency=medium
 
   * debian/copyright:
