Upload xubuntu-artwork 22.10.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (22.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (22.10.1) kinetic; urgency=medium
 
   * New walpaper for 22.10 (LP: #1992956)
 
