--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,11 @@ xubuntu-artwork (23.04) UNRELEASED; urgency=medium
     - Bump plymouth-text version number for lunar
   * debian/control:
     - Bump Standards-Version to 4.6.1.0
+  * debian/source/lintian-overrides:
+    - Rename binary-control-field-duplicates-source to
+      installable-field-mirrors-source
 
- -- Sean Davis <sean@bluesabre.org>  Sat, 29 Oct 2022 17:32:52 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sat, 29 Oct 2022 17:34:55 -0400
 
 xubuntu-artwork (22.10.1) kinetic; urgency=medium
 
