--- a/debian/changelog
+++ b/debian/changelog
@@ -6,11 +6,12 @@ xubuntu-artwork (23.04) UNRELEASED; urgency=medium
     - Bump plymouth-text version number for lunar
   * debian/control:
     - Bump Standards-Version to 4.6.1.0
+    - Update Vcs-{Browser,Git} to GitHub
   * debian/source/lintian-overrides:
     - Rename binary-control-field-duplicates-source to
       installable-field-mirrors-source
 
- -- Sean Davis <sean@bluesabre.org>  Sat, 29 Oct 2022 17:34:55 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sat, 29 Oct 2022 17:41:34 -0400
 
 xubuntu-artwork (22.10.1) kinetic; urgency=medium
 
