debian/copyright: Update copyright years

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 xubuntu-artwork (23.04.1) UNRELEASED; urgency=medium
 
+  [ Pasi Lallinaho ]
   * New wallpaper for 23.04 (LP: #2016062)
 
- -- Pasi Lallinaho <pasi@shimmerproject.org>  Thu, 13 Apr 2023 10:33:52 +0300
+  [ Sean Davis ]
+  * debian/copyright:
+    - Update copyright years
+
+ -- Sean Davis <sean@bluesabre.org>  Thu, 13 Apr 2023 04:42:46 -0400
 
 xubuntu-artwork (23.04) lunar; urgency=medium
 
