--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 xubuntu-artwork (23.10.1) UNRELEASED; urgency=medium
 
+  [ Sean Davis ]
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
     - Bump plymouth-text version number for mantic
 
- -- Sean Davis <sean@bluesabre.org>  Tue, 19 Sep 2023 07:10:05 -0400
+  [ Pasi Lallinaho ]
+  * - New wallpaper for 21.10 (LP: #2037708)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Fri, 29 Sep 2023 12:56:12 +0300
 
 xubuntu-artwork (23.10) mantic; urgency=medium
 
