Add mantic wallpaper to xubuntu-wallpapers.install

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ xubuntu-artwork (23.10.1) UNRELEASED; urgency=medium
   [ Pasi Lallinaho ]
   * - New wallpaper for 23.10 (LP: #2037708)
 
- -- Pasi Lallinaho <pasi@shimmerproject.org>  Fri, 29 Sep 2023 12:56:12 +0300
+ -- Sean Davis <sean@bluesabre.org>  Sat, 30 Sep 2023 07:14:50 -0400
 
 xubuntu-artwork (23.10) mantic; urgency=medium
 
