--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xubuntu-artwork (23.10.1) UNRELEASED; urgency=medium
+xubuntu-artwork (23.10.1) mantic; urgency=medium
 
   [ Sean Davis ]
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
@@ -7,7 +7,7 @@ xubuntu-artwork (23.10.1) UNRELEASED; urgency=medium
   [ Pasi Lallinaho ]
   * - New wallpaper for 23.10 (LP: #2037708)
 
- -- Sean Davis <sean@bluesabre.org>  Sat, 30 Sep 2023 07:14:50 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sat, 30 Sep 2023 07:46:10 -0400
 
 xubuntu-artwork (23.10) mantic; urgency=medium
 
