--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (24.04) UNRELEASED; urgency=medium
+
+  * usr/share/gtksourceview-5/*
+    - Add gtksourceview-5 themes (LP: #2049115)
+
+ -- Sean Davis <sean@bluesabre.org>  Sun, 14 Jan 2024 08:24:38 -0500
+
 xubuntu-artwork (23.10.1) mantic; urgency=medium
 
   [ Sean Davis ]
