--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
 xubuntu-artwork (24.04) UNRELEASED; urgency=medium
 
+  * debian/xubuntu-wallpapers.links:
+    - Link to development wallpaper
   * usr/share/gtksourceview-5/*
     - Add gtksourceview-5 themes (LP: #2049115)
   * usr/share/libgedit-gtksourceview-300/*
     - Add libgedit-gtksourceview-300 themes (LP: #2049108)
+  * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
+    - Bump plymouth-text version number for noble
 
- -- Sean Davis <sean@bluesabre.org>  Sun, 14 Jan 2024 08:29:40 -0500
+ -- Sean Davis <sean@bluesabre.org>  Sat, 20 Jan 2024 10:06:07 -0500
 
 xubuntu-artwork (23.10.1) mantic; urgency=medium
 
