--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
 xubuntu-artwork (24.10) UNRELEASED; urgency=medium
 
+  * debian/control,
+    debian/xubuntu-wallpapers.install,
+    debian/xubuntu-wallpapers-noble.install:
+    - Split Noble-era wallpapers into separate package
   * debian/xubuntu-wallpapers.links:
     - Link to development wallpaper
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
     - Bump plymouth-text version number for oracular
 
- -- Sean Davis <sean@bluesabre.org>  Sat, 07 Sep 2024 09:17:59 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sat, 07 Sep 2024 09:40:34 -0400
 
 xubuntu-artwork (24.04.1) noble; urgency=medium
 
