--- a/debian/changelog
+++ b/debian/changelog
@@ -4,12 +4,14 @@ xubuntu-artwork (24.10) UNRELEASED; urgency=medium
     debian/xubuntu-wallpapers.install,
     debian/xubuntu-wallpapers-noble.install:
     - Split Noble-era wallpapers into separate package
+  * debian/copyright:
+    - Update copyrights for wallpaper
   * debian/xubuntu-wallpapers.links:
     - Link to development wallpaper
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
     - Bump plymouth-text version number for oracular
 
- -- Sean Davis <sean@bluesabre.org>  Sat, 07 Sep 2024 09:40:34 -0400
+ -- Sean Davis <sean@bluesabre.org>  Sun, 08 Sep 2024 06:28:41 -0400
 
 xubuntu-artwork (24.04.1) noble; urgency=medium
 
