debian/xubuntu-artwork.postinst: Install missing 96 size distributor-logo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xubuntu-artwork (24.10.1) UNRELEASED; urgency=medium
+
+  * debian/xubuntu-artwork.postinst:
+    - Install missing 96 size distributor-logo
+
+ -- Sean Davis <sean@bluesabre.org>  Mon, 23 Sep 2024 06:11:46 -0400
+
 xubuntu-artwork (24.10) oracular; urgency=medium
 
   * debian/control:
