--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,14 @@
 xubuntu-artwork (24.10.1) UNRELEASED; urgency=medium
 
+  [ Sean Davis ]
   * debian/xubuntu-artwork.postinst:
     - Install missing 96 size distributor-logo
     - Install xubuntu-branded ubuntu-logo
+
   [ Pasi Lallinaho ]
   * New wallpaper for 24.10 (LP: #2083637)
 
- -- Sean Davis <sean@bluesabre.org>  Mon, 23 Sep 2024 06:14:58 -0400
+ -- Sean Davis <sean@bluesabre.org>  Thu, 03 Oct 2024 16:54:35 -0400
 
 xubuntu-artwork (24.10) oracular; urgency=medium
 
