--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-xubuntu-artwork (25.04) UNRELEASED; urgency=medium
+xubuntu-artwork (25.04) plucky; urgency=medium
 
   * debian/xubuntu-wallpapers.links:
     - Link to development wallpaper
   * usr/share/plymouth/themes/xubuntu-text/xubuntu-text.plymouth
     - Bump plymouth-text version number for plucky
 
- -- Sean Davis <sean@bluesabre.org>  Fri, 22 Nov 2024 23:45:14 -0500
+ -- Sean Davis <sean@bluesabre.org>  Mon, 25 Nov 2024 06:52:32 -0500
 
 xubuntu-artwork (24.10.1) oracular; urgency=medium
 
