New wallpaper for 25.10

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xubuntu-artwork (25.10) UNRELEASED; urgency=medium
+
+  * New wallpaper for 25.10 (LP: #2127033)
+
+ -- Pasi Lallinaho <pasi@shimmerproject.org>  Tue, 07 Oct 2025 21:55:25 +0300
+
 xubuntu-artwork (25.04.1) plucky; urgency=medium
 
   [ Pasi Lallinaho ]
